fix(server): fix chart overflow

--- a/server/assets/app/css/layouts.css
+++ b/server/assets/app/css/layouts.css
@@ -38,4 +38,6 @@
   flex: 1;
 
   padding: var(--noora-spacing-5);
+  min-width: 0;
+  overflow: hidden;
 }
